<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/round_background20"
        android:paddingTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_condition"
                android:scaleType="fitCenter"
                android:id="@+id/control_icon" />
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/more_ripple_effect_button"
                android:id="@+id/add_control_btn"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15sp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:textColor="@color/sbcc_blue_color"
            android:text="@string/home_condition_str"
            android:id="@+id/control_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#929292"
            android:text="@string/condition_good_str"
            android:id="@+id/control_status_text"/>
    </LinearLayout>

    <View
        android:layout_width="10dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@drawable/round_background20"
        android:paddingTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/icon_out"
                android:scaleType="fitCenter"
                android:id="@+id/control_icon1"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/more_ripple_effect_button"
                android:id="@+id/add_control_btn1"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15sp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:textColor="@color/sbcc_blue_color"
            android:text="@string/out_mode_str"
            android:id="@+id/control_name1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#929292"
            android:text="@string/out_str"
            android:id="@+id/control_status_text1"/>
    </LinearLayout>
</LinearLayout>