<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/top_navi_height"
    android:paddingBottom="@dimen/bottom_navi_padding"
    tools:context=".fragment.FragmentHomeNotRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/home_top_background">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/home_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                />

            <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                android:id="@+id/product_detila_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                app:dampingRatio="0.5"
                app:dotsColor="#FFFFFF"
                app:dotsStrokeColor="#DEDEDE"
                app:dotsSize="10dp"
                app:dotsSpacing="6dp"
                app:dotsStrokeWidth="2dp"
                app:stiffness="300"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:padding="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/round_btn_selector"
                android:clickable="true"
                android:layout_marginBottom="20dp"
                android:id="@+id/connect_wallpad_btn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/connect_wallpad"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/sbcc_blue_color"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp"
                    android:text="@string/connect_to_wallpad_str" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:textColor="@color/sbcc_blue_color"
                    android:text="@string/connect_by_privatekey_str"
                    android:textSize="15sp"
                    android:background="@drawable/stroke_round_button_selector"
                    android:id="@+id/connect_to_private_btn"/>

                <View
                    android:layout_width="15dp"
                    android:layout_height="60dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:textColor="@color/sbcc_blue_color"
                    android:text="@string/see_mode"
                    android:textSize="15sp"
                    android:background="@drawable/stroke_round_button_selector"
                    android:id="@+id/see_mode_btn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>